# storage/api-docs/api-docs.json
@@ -13,6 +13,27 @@
                 ],
                 "summary": "Get a list of Products",
                 "operationId": "c6fe497a0a1c056bf49d502b6aaadc81",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number for pagination",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Search term to filter products by name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -100,10 +121,6 @@
                                     "nameEn": {
                                         "type": "string",
                                         "example": "LG Fridge"
-                                    },
-                                    "serialNumber": {
-                                        "type": "string",
-                                        "example": "INVFR0000001"
                                     },
                                     "price": {
                                         "type": "number",
